--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
-  site_title: Index
-  site_tagline: A minimal, fixed sidebar grid portfolio Jekyll theme.
+  site_title: nicool
+  site_tagline: media server engineer - creative coder
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -10,9 +10,7 @@ header_settings:
 menu_settings:
   menu_items:
     - title: 'Projects'
-      url: '/'
-    - title: 'Blog'
-      url: '/blog/'
+      url: '/projects/'
     - title: 'About'
       url: '/about'
     - title: 'Contact'
