--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ header_settings:
 menu_settings:
   menu_items:
     - title: 'Projects'
-      url: '/projects/'
+      url: '/'
     - title: 'About'
       url: '/about'
     - title: 'Contact'
