--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: nicool
-  site_tagline: media server engineer - creative coder
+  site_tagline: los angeles, ca
   favicon_image: /images/favicon.png
 
 header_settings:
